@@ -11,6 +11,11 @@ YYYY-MM-DD  John Doe  <johndoe@example.com>
 	* anotherfile.ext (somefunction): more changes
 
 2011-11-22 German Llort <german.llort@bsc.es>
+	* Makefiles in TreeDBSCAN changed to generated static binaries
+
+	* Tree_DBSCAN_env.sh now sets the ClusteringSuite libraries directory in the LD_LIBRARY_PATH
+
+2011-11-22 German Llort <german.llort@bsc.es>
 	* TreeDBSCAN MRNet protocol separated into 3 independent libraries
 	for external use (lib*TreeDBSCAN)
 
